--- a/Microservicio-Persona/Microservicio-Persona/appsettings.json
+++ b/Microservicio-Persona/Microservicio-Persona/appsettings.json
@@ -10,6 +10,6 @@
 
 
   "ConnectionStrings": {
-    "ConnectionString": "Server=OCTA-PC\\SQLEXPRESS;Database=MicroPersona;Trusted_Connection=True;"
+    "ConnectionString": "Server=.\\SQLExpress;Database=MicroPersona;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
