--- a/Microservicio-Persona/Microservicio-Persona.Aplication/Microservicio-Persona.Application.csproj
+++ b/Microservicio-Persona/Microservicio-Persona.Aplication/Microservicio-Persona.Application.csproj
@@ -12,6 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.8" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.1" />
