--- a/Microservicio-Persona/Microservicio-Persona/appsettings.Development.json
+++ b/Microservicio-Persona/Microservicio-Persona/appsettings.Development.json
@@ -6,6 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionString": "Server=OCTA-PC\\SQLEXPRESS;Database=Template;Trusted_Connection=True;"
+  "ConnectionString": "Server=OCTA-PC\\SQLEXPRESS;Database=MicroservicioPersona;Trusted_Connection=True;"
 
 }
