--- a/Microservicio-Persona/Microservicio-Persona.Aplication/Microservicio-Persona.Application.csproj
+++ b/Microservicio-Persona/Microservicio-Persona.Aplication/Microservicio-Persona.Application.csproj
@@ -13,6 +13,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.8" />
+    <PackageReference Include="SqlKata" Version="2.2.0" />
+    <PackageReference Include="SqlKata.Execution" Version="2.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.1" />
