--- a/Microservicio-Persona/Microservicio-Persona/appsettings.json
+++ b/Microservicio-Persona/Microservicio-Persona/appsettings.json
@@ -9,7 +9,7 @@
     "AllowedHosts": "*",
 
 
-  "ConnectionStrings": {
-    "ConnectionString": "Server=CPX-GGXIFLAKH7B\\DBSJULIA;Database=MicroservicioPersona;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "ConnectionStrings": {
+        "ConnectionString": "Server=OCTA-PC\\SQLEXPRESS;Database=MicroservicioPersona;Trusted_Connection=True"
+    }
 }
