--- a/Microservicio-Persona/Microservicio-Persona/appsettings.Development.json
+++ b/Microservicio-Persona/Microservicio-Persona/appsettings.Development.json
@@ -1,11 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "ConnectionString": "Server=CPX-GGXIFLAKH7B\\DBSJULIA;Database=MicroservicioPersona;Trusted_Connection=True;"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "ConnectionString": "Server=OCTA-PC\\SQLEXPRESS;Database=MicroservicioPersona;Trusted_Connection=True;"
 
 }
