fix-entity-especialidad-y-endpoints

--- a/Microservicio-Persona/Microservicio-Persona/appsettings.Development.json
+++ b/Microservicio-Persona/Microservicio-Persona/appsettings.Development.json
@@ -6,6 +6,6 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "ConnectionString": "Server=OCTA-PC\\SQLEXPRESS;Database=MicroservicioPersona;Trusted_Connection=True;"
+    "ConnectionString": "Server=CPX-GGXIFLAKH7B\\DBSJULIA;Database=MicroservicioPersonav2;Trusted_Connection=True;MultipleActiveResultSets=true"
 
 }
