--- a/Microservicio-Persona/Microservicio-Persona/appsettings.json
+++ b/Microservicio-Persona/Microservicio-Persona/appsettings.json
@@ -10,6 +10,6 @@
 
 
     "ConnectionStrings": {
-        "ConnectionString": "Server=OCTA-PC\\SQLEXPRESS;Database=MicroservicioPersona;Trusted_Connection=True"
+        "ConnectionString": "Server=CPX-GGXIFLAKH7B\\DBSJULIA;Database=MicroservicioPersonav2;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
 }
