fix-entity-especialidad-y-endpoints

--- a/Microservicio-Persona/.gitignore
+++ b/Microservicio-Persona/.gitignore
@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+Microservicio-Persona/Microservicio-Persona/appsettings.json
+Microservicio-Persona/Microservicio-Persona/appsettings.Development.json
+Microservicio-Persona/Microservicio-Persona/Startup.cs
+
+
 # User-specific files
 *.rsuser
 *.suo
