--- a/Microservicio-Persona/Microservicio-Persona/appsettings.json
+++ b/Microservicio-Persona/Microservicio-Persona/appsettings.json
@@ -10,6 +10,6 @@
 
 
   "ConnectionStrings": {
-    "ConnectionString": "Server=.\\SQLExpress;Database=MicroPersona;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConnectionString": "Server=CPX-GGXIFLAKH7B\\DBSJULIA;Database=MicroservicioPersonav3;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
