--- a/Microservicio-Persona/Microservicio-Persona/appsettings.json
+++ b/Microservicio-Persona/Microservicio-Persona/appsettings.json
@@ -1,15 +1,17 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
-    "AllowedHosts": "*",
-
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
 
   "ConnectionStrings": {
     "DefaultConnection": "Server= .\\SQLEXPRESS ;Database=MicroservicioPersonav3;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Authentication": {
+    "SecretKey": "WDFBgbfndRTHD65ujyjnewg34t"
   }
 }
