commit decrementar cantidad al inscribirse

--- a/Microservicio-Persona/Microservicio-Persona.Aplication/Microservicio-Persona.Application.csproj
+++ b/Microservicio-Persona/Microservicio-Persona.Aplication/Microservicio-Persona.Application.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\email\email.csproj" />
     <ProjectReference Include="..\Microservicio-Persona.Domain\Microservicio-Persona.Domain.csproj" />
   </ItemGroup>
 
