--- a/Microservicio-Persona/Microservicio-Persona/Microservicio-Persona.csproj
+++ b/Microservicio-Persona/Microservicio-Persona/Microservicio-Persona.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Microservicio_Persona</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
