--- a/Microservicio-Persona/Microservicio-Persona/appsettings.json
+++ b/Microservicio-Persona/Microservicio-Persona/appsettings.json
@@ -8,9 +8,9 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionStrings": {
-    "DefaultConnection": "Server= .\\SQLEXPRESS ;Database=MicroservicioPersonav3;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=OCTA-PC\\SQLEXPRESS;Database=MicroservicioPersonav3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
   "Authentication": {
     "SecretKey": "WDFBgbfndRTHD65ujyjnewg34t"
   }
