error_cadena de conexion

--- a/Microservicio-Persona/Microservicio-Persona/appsettings.json
+++ b/Microservicio-Persona/Microservicio-Persona/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
 
     "ConnectionStrings": {
-        "DefaultConnection": "Server=OCTA-PC\\SQLEXPRESS;Database=MicroservicioPersonav3;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": " Server= .\\SQLEXPRESS ;Database=MicroservicioPersonav3;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
   "Authentication": {
     "SecretKey": "WDFBgbfndRTHD65ujyjnewg34t"
